# cosine-similarity-search

./: README.md  pyproject.toml
data/: cocktailnames.txt  name_n_gram_matrix.joblib  name_n_gram_vector.joblib  name_n_grams.joblib
src/: 0_make_name_bi_grams.py  1_save_train_vectors.py  2_load_predict_test.py  simple_example.py
