[tool.poetry]
name = "cosine-similarity-search"
version = "0.1.0"
description = "Search short texts by cosine similarity of n-gram chars."
readme = "README.md"
authors = ["zushicat"]

[tool.poetry.dependencies]
python = "~3.6"

joblib = "~0.14.1"
pandas = "~0.25.3"
scikit-learn = "~0.22"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
flake8-bugbear = "^18.2.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^1.4.1"
flake8-import-order = "^0.17.1"
flake8-pep3101 = "^1.2.1"
flake8-quotes = "^1.0.0"
mypy = "^0.620"
pep8-naming = "^0.5.0"
pytest-cov = "^2.5.1"
pytest-datadir = "^1.0.1"
pytest-docstyle = "^1.3.1"
pytest-flake8 = "^1.0.0"
pytest-pythonpath = "^0.7.2"
pytest-randomly = "^1.2.3"
pytest-xdist = "^1.22.2"
